<resources>
    <string name="app_name">SunChaser</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="map">Map</string>
    <string name="setting">Settings\n</string>
    <string name="navigation_drawer_open">Navigation Drawer Open</string>
    <string name="navigation_drawer_close">Navigation Drawer Close</string>
    <string name="favorite_locations">Favorite Locations</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="hourly_forecast">HOURLY FORECAST</string>
    <string name="weather_statistics">WEATHER STATISTICS</string>
    <string name="_5_day_forecast">5-DAY FORECAST</string>
    <string name="are_you_sure_you_want_to_delete_this_location">Are you sure you want to delete this location?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="humidity">HUMIDITY</string>
    <string name="wind">WIND</string>
    <string name="pressure">PRESSURE</string>
    <string name="alarm">Alarm</string>
    <string name="select_date">Select Date</string>
    <string name="select_start_time">Select Start Time</string>
    <string name="alarm_sound_notification">Notification / Alarm Sound</string>
    <string name="add_alert">Add Alert</string>
    <string name="duration_minutes">Duration (minutes):</string>
    <string name="select_end_time">Select End Time</string>
    <string name="active">Active</string>
    <string name="are_you_sure_you_want_to_delete_this_alert">Are you sure you want to delete this Alert</string>
    <string name="settings">Settings</string>
    <string name="location_source">Location Source</string>
    <string name="gps">GPS</string>
    <string name="temperature_unit">Temperature Unit</string>
    <string name="wind_speed_unit">Wind Speed Unit</string>
    <string name="language">Language</string>
    <string name="average_temperature">Average Temperature</string>
    <string name="max_temperature">Max Temperature</string>
    <string name="min_temperature">Min Temperature</string>
    <string name="average_humidity">Average Humidity</string>
    <string name="enable_location">Enable Location</string>
    <string name="we_can_t_fetch_your_location">We Can\'t fetch your location</string>
</resources>