<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@android:color/transparent"
    >

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvLocationSource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_source"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/tvLocationSource"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/radioGps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gps"
            android:checked="true"
            android:clickable="true"
            android:focusable="true" />

        <RadioButton
            android:id="@+id/radioMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map"
            android:clickable="true"
            android:focusable="true" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvTempUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature_unit"
        android:textSize="18sp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/radioGroupLocation"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinnerTempUnit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:entries="@array/temp_units"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/tvTempUnit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvWindUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wind_speed_unit"
        android:textSize="18sp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/spinnerTempUnit"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinnerWindUnit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:entries="@array/wind_units"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/tvWindUnit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language"
        android:textSize="18sp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/spinnerWindUnit"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinnerLanguage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:entries="@array/languages"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/tvLanguage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>